@@ -1,9 +1,15 @@
 CURRENTLY ON:
  * Mining fluid required randomizer?
+    * Finding fluids is failing
+    * Do I check minable exists for mining entities?
  * Make unified things more user friendly (final pass)
+    * Make tech prereqs less linear
  * Test for hidden items/recipes in logic (I think it doesn't do tests now)
- * Add full tests for unified handlers
+ * Add full tests for with unified handlers
  * More safeguards
+    * Go through orb and dosh run to see what needs to be changed
+ * Fail on softlocks during testing (and perhaps prereq shuffle failures by searching for % or something)
+ * Check for spoil_trigger_result when randomizing spoil results
 
  * (30min) Refactoring lookups (then push commit about refactoring)
  * (a few hours?) Handlers, I.B.1, probably will take at least this week, entity randomization as a bonus
