@@ -1,6 +1,15 @@
 A list of handlers and info about them.
 
+Make sure when adding a handler to also do the following:
+1. Add an entry for it here
+2. Add it to the list in execute.lua
+3. Add a setting for it
+
 # entity-operation-fluid
+
+Not ready for release
+
+# mining-fluid-required
 
 # recipe-category
 
